Fix cart scrollbar

--- a/css/orden.css
+++ b/css/orden.css
@@ -21,8 +21,6 @@
 	margin: 0 80px;
 }
 
-
-
 #main {
 	width: 100%;
 	height: 95%;
@@ -68,9 +66,7 @@
 #cart {
 	overflow: scroll;
 	scrollbar-width: none;
-	/* Firefox */
 	-ms-overflow-style: none;
-	/* IE 10+ */
 }
 
 #categories .title {
@@ -291,6 +287,7 @@ input[type=checkbox].checkbox::after {
 	height: calc(94% - 40px);
 	margin-bottom: 20px;
 	width: 100%;
+	overflow: hidden;
 }
 
 #cart-placeholder {
@@ -302,6 +299,7 @@ input[type=checkbox].checkbox::after {
 .cartlist {
 	justify-content: start;
 	min-width: 90%;
+	overflow-x: auto;
 }
 
 
